@@ -1,3 +1,7 @@
+2011-07-27  Ingo Renner  <ingo@typo3.org>
+
+	* Changed Tika path resolution to use t3lib_div::getFileAbsFileName() (credits Peter Kraume)
+
 2011-06-15  Ingo Renner  <ingo@typo3.org>
 
 	* Fixed issue #27473: wrong height and width pixels in DAM (credits Ivan Kartolo)
